[package]
name = "perl-dap"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "Debug Adapter Protocol server for Perl"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
homepage = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
documentation = "https://docs.rs/perl-dap"
readme = "README.md"
keywords = ["perl", "parser", "lsp", "dap", "debug"]
categories = ["development-tools", "parsing"]
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE*"
]

[[bin]]
name = "perl-dap"
path = "src/main.rs"

[lib]
name = "perl_dap"
path = "src/lib.rs"

[dependencies]
# LSP types reuse (Position, Range, Location, etc.)
lsp-types = "0.97.0"

# JSON serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Regex for parsing debugger output
regex = "1.12.2"
once_cell = "1.21.3"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Command-line argument parsing
clap = { version = "4.5.55", features = ["derive"] }

# Rope for position mapping (reuse from perl-parser)
ropey = "1.6.1"

# Perl parser for AST breakpoint validation
perl-parser = { path = "../perl-parser" }
perl-dap-breakpoint = { workspace = true }
perl-dap-eval = { workspace = true }
perl-dap-variables = { workspace = true }
perl-dap-stack = { workspace = true }

# Process management
# Note: tokio-process not needed (using tokio::process)

[dev-dependencies]
# Property-based testing (AC13)
proptest = "1.9.0"

# Performance benchmarking (AC14, AC15)
criterion = "0.8.1"

# Test fixtures
tempfile = "3.24.0"

perl-tdd-support = { workspace = true }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["signal"] }  # For SIGINT handling (AC9)

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }  # For Ctrl+C (AC9)

[features]
default = []
# DAP implementation phases (TDD scaffold tests)
dap-phase1 = []  # AC1-AC4: Bridge to Perl::LanguageServer
dap-phase2 = []  # AC5-AC16: Native adapter, integration tests, performance, security
dap-phase3 = []  # AC17-AC19: Non-regression, dependency management, packaging

# Test targets with acceptance criteria mapping
[[test]]
name = "bridge_integration_tests"
path = "tests/bridge_integration_tests.rs"
# AC1-AC4: Bridge to Perl::LanguageServer DAP

[[test]]
name = "dap_adapter_tests"
path = "tests/dap_adapter_tests.rs"
# AC5-AC12: Native Rust adapter implementation

[[test]]
name = "tcp_attach_tests"
path = "tests/tcp_attach_tests.rs"
# Phase5: TCP attach functionality tests

[[test]]
name = "dap_golden_transcript_tests"
path = "tests/dap_golden_transcript_tests.rs"
# AC13: Comprehensive integration tests with golden transcripts

[[test]]
name = "dap_breakpoint_matrix_tests"
path = "tests/dap_breakpoint_matrix_tests.rs"
# AC13, AC14: Breakpoint validation edge cases

[[test]]
name = "dap_performance_tests"
path = "tests/dap_performance_tests.rs"
# AC14, AC15: Performance benchmarks and baselines

[[test]]
name = "dap_security_tests"
path = "tests/dap_security_tests.rs"
# AC16: Security validation (path traversal, safe eval, timeout, Unicode)

[[test]]
name = "dap_dependency_tests"
path = "tests/dap_dependency_tests.rs"
# AC18: Dependency management and installation strategy

[[test]]
name = "dap_packaging_tests"
path = "tests/dap_packaging_tests.rs"
# AC19: Binary packaging and cross-platform distribution

[[bench]]
name = "dap_benchmarks"
path = "benches/dap_benchmarks.rs"
harness = false

[[bench]]
name = "dap_native_benchmarks"
path = "benches/dap_native_benchmarks.rs"
harness = false
# Phase5: Native DAP performance benchmarks

[lints]
workspace = true
