[package]
name = "perl-diagnostics-codes"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-diagnostics-codes"
description = "Stable diagnostic codes and severity levels for Perl LSP"
readme = "README.md"
keywords = ["perl", "diagnostics", "lsp", "severity", "lint"]
categories = ["development-tools", "development-tools::testing"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true

