[package]
name = "perl-error"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Error types, classification, and recovery strategies for the Perl parser ecosystem"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-error"
keywords = ["perl", "parser", "error", "recovery", "diagnostics"]
categories = ["parsing", "development-tools"]

[dependencies]
thiserror = "2.0.18"
perl-ast = { workspace = true }
perl-regex = { workspace = true }
perl-position-tracking = { workspace = true }
perl-lexer = { workspace = true } # Needed for TokenType in recovery

[lints]
workspace = true
