[package]
name = "perl-heredoc"
version = "0.9.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Heredoc collector and processor for Perl — handles multi-line heredoc syntax including indentation stripping and CRLF normalization"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-heredoc"
keywords = ["perl", "heredoc", "parser", "lexer", "here-document"]
categories = ["parsing", "text-processing"]

[dependencies]
perl-position-tracking = { workspace = true }

[lints]
workspace = true
