[package]
name = "perl-incremental-parsing"
version = "0.8.8"
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "Incremental parsing support for Perl"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
homepage = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
documentation = "https://docs.rs/perl-incremental-parsing"
keywords = ["perl", "incremental", "parser", "lsp"]
categories = ["parsing", "development-tools", "text-editors"]
include = [
  "src/**",
  "Cargo.toml",
  "LICENSE*",
  "README.md"
]

[lib]
doctest = false

[dependencies]
perl-parser-core = { workspace = true }
perl-edit = { workspace = true }
perl-lexer = { workspace = true }
anyhow = "1.0.101"
lsp-types = "0.97.0"
ropey = "1.6.1"
serde_json = "1.0.149"
tracing = "0.1.44"

[features]
default = []

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true

