[package]
name = "perl-incremental-parsing"
version = "0.9.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Incremental parsing support for Perl with subtree reuse and LSP integration"
readme = "README.md"
documentation = "https://docs.rs/perl-incremental-parsing"
keywords = ["perl", "incremental", "parser", "lsp", "rope"]
categories = ["parsing", "development-tools", "text-editors"]
include = [
  "src/**",
  "Cargo.toml",
  "LICENSE*",
  "README.md"
]

[lib]
doctest = false

[dependencies]
perl-parser-core = { workspace = true }
perl-edit = { workspace = true }
perl-lexer = { workspace = true }
anyhow = "1.0.100"
lsp-types = "0.97.0"
ropey = "1.6.1"
serde_json = "1.0.149"
tracing = "0.1.44"

[features]
default = []

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true

