[package]
name = "perl-lexer"
version = "0.8.8"
edition = "2024"
rust-version = "1.90"
authors = ["Tree-sitter Perl Contributors"]
description = "High-performance Perl lexer with context-aware tokenization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessSteven/tree-sitter-perl-rs"
homepage = "https://github.com/EffortlessSteven/tree-sitter-perl-rs"
readme = "README.md"
documentation = "https://docs.rs/perl-lexer"
keywords = ["perl", "lexer", "tokenizer", "parser", "syntax"]
categories = ["parsing", "text-processing"]
include = ["src/**", "README.md", "LICENSE*", "Cargo.toml"]

[dependencies]
# Core dependencies
unicode-ident = "1.0.19"
memchr = "2.7.6"

# For regex pattern matching
regex = "1.11.3"
once_cell = "1.21.3"

# For better error handling
thiserror = "2.0.16"

[dev-dependencies]
criterion = "0.7.0"
pretty_assertions = "1.4.1"
proptest = "1.8.0"

[features]
default = []
# Enable SIMD optimizations for string processing
simd = []
# Enable regex caching for better performance
regex-cache = []

[[bench]]
name = "lexer_benchmarks"
harness = false

