[package]
name = "perl-lexer"
version = "0.8.8"
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "High-performance Perl lexer with context-aware tokenization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
homepage = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
readme = "README.md"
documentation = "https://docs.rs/perl-lexer"
keywords = ["perl", "lexer", "tokenizer", "parser", "syntax"]
categories = ["parsing", "text-processing"]
include = ["src/**", "README.md", "LICENSE*", "Cargo.toml"]

[dependencies]
# Core dependencies
unicode-ident = "1.0.22"
memchr = "2.7.6"

# For better error handling
thiserror = "2.0.18"
perl-position-tracking = { workspace = true }

[dev-dependencies]
criterion = "0.8.2"
pretty_assertions = "1.4.1"
proptest = "1.10.0"

[features]
default = []
# Enable SIMD optimizations for string processing
simd = []
# Enable slow stress tests (regex fuzzing, etc.)
slow_tests = []

[lints]
workspace = true

[[bench]]
name = "lexer_benchmarks"
harness = false
