[package]
name = "perl-lexer"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "High-performance Perl lexer with context-aware tokenization"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/perl-lexer"
keywords = ["perl", "lexer", "tokenizer", "parser", "syntax"]
categories = ["parsing", "text-processing"]
include = ["src/**", "README.md", "LICENSE*", "Cargo.toml"]

[dependencies]
# Core dependencies
unicode-ident = "1.0.22"
memchr = "2.7.6"

# For better error handling
thiserror = "2.0.18"
perl-position-tracking = { workspace = true }

[dev-dependencies]
criterion = "0.8.1"
pretty_assertions = "1.4.1"
proptest = "1.9.0"

[features]
default = []
# Enable SIMD optimizations for string processing
simd = []
# Enable slow stress tests (regex fuzzing, etc.)
slow_tests = []

[lints]
workspace = true

[[bench]]
name = "lexer_benchmarks"
harness = false
