[package]
name = "perl-lsp-code-actions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "LSP code actions provider for Perl"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-lsp-code-actions"
keywords = ["perl", "lsp", "code-actions", "quick-fixes", "refactoring"]
categories = ["development-tools", "text-editors"]

[lib]
doctest = false

[dependencies]
perl-parser-core = { workspace = true }
perl-position-tracking = { workspace = true }
perl-refactoring = { workspace = true }
perl-workspace-index = { workspace = true }
perl-semantic-analyzer = { workspace = true }
perl-lsp-rename = { workspace = true }
perl-lsp-diagnostics = { workspace = true }
serde = "1.0.228"
thiserror = "2.0.18"

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true
