[package]
name = "perl-lsp-inlay-hints"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "LSP inlay hints provider for Perl"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-lsp-inlay-hints"
keywords = ["perl", "lsp", "inlay-hints", "type-hints", "ide"]
categories = ["development-tools", "text-editors"]

[lib]
doctest = false

[dependencies]
perl-semantic-analyzer = { workspace = true }
perl-position-tracking = { workspace = true }
perl-parser-core = { workspace = true }
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true
