[package]
name = "perl-lsp-navigation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "LSP navigation providers for Perl"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-lsp-navigation"
keywords = ["perl", "lsp", "navigation", "go-to-definition", "find-references"]
categories = ["development-tools", "text-editors"]

[lib]
doctest = false

[dependencies]
perl-parser-core = { workspace = true }
perl-semantic-analyzer = { workspace = true }
perl-workspace-index = { workspace = true }
lsp-types = { version = "0.97.0" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
url = "2.5.8"
perl-position-tracking = { workspace = true }

[features]
default = []
lsp-compat = []  # Enable LSP-specific functionality
slow_tests = []  # Enable slow/expensive tests

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true
