[package]
name = "perl-lsp-protocol"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "JSON-RPC/LSP protocol types and capability configuration for perl-lsp"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-lsp-protocol"
keywords = ["perl", "lsp", "jsonrpc", "protocol", "language-server"]
categories = ["development-tools", "text-editors"]
include = [
  "src/**",
  "Cargo.toml",
  "LICENSE*",
  "README.md"
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
lsp-types = "0.97.0"

[features]
lsp-ga-lock = []

[lints]
workspace = true
