[package]
name = "perl-lsp-providers"
version = "0.8.8"
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "LSP provider glue and tooling integrations for Perl"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
homepage = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
documentation = "https://docs.rs/perl-lsp-providers"
keywords = ["perl", "lsp", "ide", "tooling"]
categories = ["development-tools", "text-editors"]
include = [
  "src/**",
  "Cargo.toml",
  "LICENSE*",
  "README.md"
]

[lib]
doctest = false

[dependencies]
perl-parser-core = { workspace = true }
perl-semantic-analyzer = { workspace = true }
perl-workspace-index = { workspace = true }
perl-refactoring = { workspace = true }
perl-incremental-parsing = { workspace = true }
perl-lexer = { workspace = true }
perl-lsp-tooling = { workspace = true }
perl-lsp-formatting = { workspace = true }
perl-lsp-diagnostics = { workspace = true }
perl-lsp-semantic-tokens = { workspace = true }
perl-lsp-inlay-hints = { workspace = true }
perl-lsp-rename = { workspace = true }
perl-lsp-navigation = { workspace = true }
perl-lsp-completion = { workspace = true }
perl-lsp-code-actions = { workspace = true }
perl-position-tracking = { workspace = true }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
lsp-types = { version = "0.97.0", optional = true }
url = "2.5.8"
md5 = "0.8.0"
walkdir = "2.5.0"

# Unix-only dependency for signal handling in debug adapter
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["signal"] }

[features]
default = ["lsp-compat"]
lsp-compat = ["lsp-types"]

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true

