[package]
name = "perl-lsp-rename"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "LSP rename provider for Perl"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-lsp-rename"
keywords = ["perl", "lsp", "rename", "refactoring", "ide"]
categories = ["development-tools", "text-editors"]

[lib]
doctest = false

[dependencies]
perl-parser-core = { workspace = true }
perl-semantic-analyzer = { workspace = true }

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true
